[gd_scene load_steps=7 format=3 uid="uid://vvbpcffm20kk"]

[ext_resource type="Script" path="res://undertale_fight/scripts/display/damage_display.gd" id="1_kvafj"]
[ext_resource type="FontFile" uid="uid://cmn4ua8grprq7" path="res://undertale_fight/assets/fonts/DeterminationSansWeb.woff" id="1_rjiq0"]
[ext_resource type="PackedScene" uid="uid://cjilm8il8jjok" path="res://undertale_fight/scenes/display/health_bar.tscn" id="2_6rir4"]

[sub_resource type="Animation" id="Animation_vmod1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Number:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-95, -90)]
}

[sub_resource type="Animation" id="Animation_unnrh"]
resource_name = "default"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Number:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-95, -90), Vector2(-95, -110), Vector2(-95, -74)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:health_animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ip1uw"]
_data = {
"RESET": SubResource("Animation_vmod1"),
"default": SubResource("Animation_unnrh")
}

[node name="DamageDisplay" type="Node2D"]
script = ExtResource("1_kvafj")
old_health = 200
remain_health = 150

[node name="Number" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.0
offset_top = -90.0
offset_right = 90.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.988235, 0.0901961, 0, 1)
theme_override_constants/outline_size = 13
theme_override_fonts/font = ExtResource("1_rjiq0")
theme_override_font_sizes/font_size = 80
horizontal_alignment = 1

[node name="HealthBar" parent="." instance=ExtResource("2_6rir4")]
position = Vector2(-188, 0)
scale = Vector2(0.63754, 0.345675)
type = 1
full_health = 300

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ip1uw")
}

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
